# tsh-erp-system

./: .cicd_test  .dockerignore  .env.chatgpt.example  .env.production.template  .env.staging.template  .gitattributes  .gitignore  .zoho_key  ACCOUNTING_MODULE_ENABLED_POSTGRESQL.md  ADVANCED_SECURITY_GUIDE.md  ANTHROPIC_CLAUDE_SDK_SETUP.md  ARCHITECTURE_CONSISTENCY_ANALYSIS.md  ARCHITECTURE_CONSISTENCY_CHECK_COMPLETE.md  ARCHITECTURE_ENHANCEMENT_PLAN.md  ARCHITECTURE_SUMMARY.md  AUTOMATED_UI_TESTING_REPORT.md  AUTO_LOGOUT_FIXED_NOW.txt  BACKEND_ENHANCEMENT_REPORT_NOV13_2025.md  BFF_ARCHITECTURE_PLAN.md  BFF_FINAL_STATS.txt  BFF_HARMONIZATION_STABILIZATION_REPORT.md  BFF_SUCCESS.txt  BFF_TRANSFORMATION_COMPLETE.md  CHATGPT_STATUS.txt  CHROME_DEVTOOLS_MCP_INSTALLATION_COMPLETE.md  CHROME_DEVTOOLS_MCP_SETUP.md  CI_CD_FIX_SUMMARY.md  CI_CD_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CLAUDE_CODE_AGENT_VERIFICATION.md  CLAUDE_CODE_ON_VPS_GUIDE.md  CLAUDE_MEMORY_FEATURE_GUIDE.md  CLAUDE_MEMORY_IMPLEMENTATION_COMPLETE.md  CLAUDE_MEMORY_QUICK_START.md  COLLECTOR_FIX_SUMMARY.md  COMMIT_MESSAGE.txt  COMPLETE_ARCHITECTURE_GUIDE.md  COMPLETE_RBAC_INTEGRATION_GUIDE.md  CONSUMER_API_FIXES_COMPLETE.md  CONSUMER_APP_FIXED_NOV13_2025.md  (+266 more)
apps/prss/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/prss/backend/alembic/: env.py
apps/prss/backend/scripts/: seed_data.py
apps/prss/backend/src/prss/: __init__.py  config.py  db.py  main.py
apps/prss/backend/src/prss/events/: outbox.py
apps/prss/backend/src/prss/models/: __init__.py  (+4 more)
apps/prss/backend/tests/: conftest.py
(+2512 files in other folders)
